# stb-automator

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  tox.ini
docs/: lirc.md
docs/source/: conf.py  gstreamer.rst  index.rst  lirc.rst
stb/: __init__.py  display.py  frame.py  key_press.py  lirc.py  remote.py  utils.py
stb/cli/: config.py  press.py
stb/config/: config.original.ini
tests/: conftest.py  test_cli_runner.py  test_frame.py  test_lirc.py
tests/utils/: sockets.py
tools/: prerequisites-install-ubuntu.sh
