[tool.poetry]
name = "stb"
version = "0.0.0"
description = "A library for automated control & testing of set-top boxes"
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eugenetriguba/stb"
keywords = [
    "set-top box", 
    "test automation", 
    "opencv",
    "tesseract", 
    "LIRC"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
stb = 'stb.cli.runner:stb'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
opencv-python = "^4.2.0"
config-file = "^0.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
seed-isort-config = "^2.1.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
bump2version = "^1.0.0"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'

[tool.isort]
line_length = 88
multi_line_output = 3
known_first_party = ["stb"]
known_third_party = ["click"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
