[tool.poetry]
name = "stb"
version = "0.0.0"
description = "A library for automated control & testing of set-top boxes"
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eugenetriguba/stb"
keywords = [
    "set-top box", 
    "test automation", 
    "opencv",
    "tesseract", 
    "LIRC",
    "gstreamer"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.taskipy.tasks]
test = "poetry run pytest -vvv --cov=stb/ --ignore=tests/integration/ --cov-report term-missing tests/"

[tool.poetry.scripts]
stb = 'stb.cli.runner:stb'

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.1"
opencv-python = "^4.2.0"
config-file = "^0.9.0"
PyGObject = "^3.36.0"
numpy = "^1.18.2"
pytesseract = "^0.3.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pre-commit = "^2.3.0"
flake8 = "^3.7.9"
isort = "^4.3.21"
seed-isort-config = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
bump2version = "^1.0.0"
taskipy = "^1.2.1"



[tool.autopep8]
max_line_length = 88

[tool.isort]
line_length = 88
multi_line_output = 3
known_first_party = ["stb"]
known_third_party = ["click", "config_file", "gi", "numpy", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
